fix text input label iOS

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <form class="app-form" id="new-note" autocomplete="off">
                 <input type="text" class="note-title" placeholder="Title" tabindex="2">
                 <div class="wrap-note-text">
-                    <div class="note-text" role="textbox" tabindex="1" contenteditable="true"></div>
                     <label>Take a note...</label>
+                    <div class="note-text" role="textbox" tabindex="1" contenteditable="true"></div>
                 </div>
                 <div class="actions">
                     <button class="button" type="submit" tabindex="3">Add Note</button>
@@ -46,9 +46,8 @@
             <div class="modal-content">
                 <input type="text" class="modal-title" placeholder="Title">
                 <div class="wrap-modal-text">
-                    <div class="modal-text" role="textbox" tabindex="1" contenteditable="true"
-                        placeholder="Take a note..."></div>
                     <label>Take a note...</label>
+                    <div class="modal-text" role="textbox" tabindex="1" contenteditable="true"></div>
                 </div>
                 <div class="actions">
                     <button class="button" id="save-modal">Save</button>
