fix viewport full height mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>memoNote</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:400,500&display=swap">
     <link rel="stylesheet" href="./styles/app.scss">
-    <script type="module" src="./js/app.js" defer></script>
+    <script type="module" src="./js/index.js" defer></script>
 </head>
 
 <body>
